Added case-run history graph to show_case.cgi

--- a/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/show.html.tmpl
@@ -230,6 +230,7 @@
 [%##### Reports #####%]
 <br><br>
 <h3>Reports</h3>
+<img src="tr_case_reports.cgi?case_id=[% case.id FILTER none %]&type=status-breakdown">
 [%##### Attachments #####%]
 <br><br>
 <h3>Attachments</h3>
