Remove test cases from a run now prompts for confirmation. Allows user to remove multiple cases from a run at once.

--- a/webtools/testopia/template/en/default/testopia/caserun/list.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/caserun/list.html.tmpl
@@ -49,6 +49,9 @@
 <br/>
 [% IF table.list_count %]
   [% PROCESS "testopia/caserun/case-history.html.tmpl" %]
+  [% IF Param('allow-test-deletion') %]
+    <p align="right"><input type="submit" name="action" value="Delete Selected" /></p>
+  [% END %]
 [% END %]
 <p>
 [% IF table.list_count == 0 %]
