--- a/webtools/testopia/template/en/default/hook/global/useful-links.html.tmpl/end/tr.html.tmpl
+++ b/webtools/testopia/template/en/default/hook/global/useful-links.html.tmpl/end/tr.html.tmpl
@@ -19,7 +19,7 @@
     <a href="tr_query.cgi">Search</a>&nbsp;|&nbsp;
     <a href="tr_new_plan.cgi">New Plan</a>&nbsp;|&nbsp;
     <a href="tr_new_case.cgi?plan_id=[% plan_id FILTER none %]">New Case</a>&nbsp;|&nbsp;
-    <a href="tr_new_run.cgi?plan_id=[% plan_id FILTER none %]">New Run</a>&nbsp;|&nbsp;
+    <a href="tr_new_run.cgi?plan_id=[% plan_id FILTER none %]&case_status_id=2">New Run</a>&nbsp;|&nbsp;
     <a href="tr_new_environment.cgi">New Environment</a>&nbsp;|&nbsp;
     <a href="tr_admin_environment.cgi">Environment Variables</a>&nbsp;|&nbsp;
     [% IF UserInGroup('admin') %]
