--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -234,11 +234,11 @@
 <h3>Test Runs</h3>
 <div id="plan_runs">
 [% IF run_table.list_count >0 %]
-<a href="tr_new_run.cgi?plan_id=[% plan.id FILTER none %]">Create a New Test Run</a><br />
+<a href="tr_new_run.cgi?plan_id=[% plan.id FILTER none %]&case_status_id=2">Create a New Test Run</a><br />
 [% END %]
 [% PROCESS testopia/run/table.html.tmpl
    table = run_table %]
-  <a href="tr_new_run.cgi?plan_id=[% plan.id FILTER none %]">Create a New Test Run</a>
+  <a href="tr_new_run.cgi?plan_id=[% plan.id FILTER none %]&case_status_id=2">Create a New Test Run</a>
 </div>
 [%##### Attachments #####%]
 <br><br>
