--- a/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
@@ -171,6 +171,7 @@
   <input type="hidden" name="current_tab" value="case" />
   <input type="hidden" name="addrun" value="[% run.id FILTER none %]" />
   <input type="hidden" name="plan_id" value="[% run.plan.id FILTER none %]" />
+  <input type="hidden" name="case_status_id" value="2" />
   <input type="hidden" name="viewall" value="1" />
   <input type="submit" value="Add Cases" />
 </form>
