Enhancement to add the ability to search testcases by run so you can add tags to multiple testcases in a run.

--- a/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/show.html.tmpl
@@ -184,7 +184,7 @@
   <input type="hidden" name="run_id" value="[% run.id FILTER none %]" />
   <input type="submit" name="action" value="Clone Run With These Cases" />
 <a href="tr_list_caseruns.cgi?[% table.get_query_part FILTER none %]">Update Multiple</a>
-
+<a href="tr_list_cases.cgi?run_id=[% run.id FILTER none %]">List Cases</a>
 <br><br>
 [%##### Categories and Tags #####%]
 <h3>CC, Coverage, Tags</h3>
