--- a/webtools/testopia/template/en/default/testopia/search/case.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/search/case.html.tmpl
@@ -183,6 +183,12 @@
   </label>
   <input name="plan_id" id="plan_id">
   <br/><br/>
+  <label for="run_id">
+     Include cases in runs numbered: 
+  </label>
+  <input name="run_id" id="run_id">
+  <br/><br/>
+  
 </p>
 
 <input type="submit" value="Submit">
