Bug 72863: Remove ugly table shown when posting/changing a bug Patch by Olav Vitters <olav@bkor.dhs.org> r+a=justdave

--- a/webtools/bugzilla/skins/standard/global.css
+++ b/webtools/bugzilla/skins/standard/global.css
@@ -270,3 +270,13 @@ table#flags td {
     margin: 1em;
     padding: 0.5em 1em;
 }
+
+dt {
+    font-weight: bolder;
+}
+body > dl > dt {
+    border-top: dotted gray thin;
+}
+dl dl > dt {
+    border-top: none;
+}
