--- a/webtools/bugzilla/template/en/default/account/prefs/saved-searches.html.tmpl
+++ b/webtools/bugzilla/template/en/default/account/prefs/saved-searches.html.tmpl
@@ -103,6 +103,7 @@
           <input type="checkbox" 
                  name="link_in_footer_[% q.id FILTER html %]"
                  value="1"
+                 alt="[% q.name FILTER html %]"
                  [% " checked" IF q.link_in_footer %]>
         </td>
         <td>
@@ -158,6 +159,7 @@
           <input type="checkbox" 
                  name="link_in_footer_[% q.id FILTER html %]"
                  value="1"
+                 alt="[% q.name FILTER html %]"
                  [% " checked" IF q.link_in_footer %]>
         </td>
       </tr>
