Bug 330290: Edit users should include user's real name and address in title - Patch by timeless <timeless@bemail.org> r=LpSolit a=justdave

--- a/webtools/bugzilla/template/en/default/admin/users/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/users/edit.html.tmpl
@@ -25,7 +25,7 @@
   #                      canbless) for viewed user.
   #%]
 
-[% title = BLOCK %]Edit user [% otheruser.login FILTER html %][% END %]
+[% title = BLOCK %]Edit user [% otheruser.identity FILTER html %][% END %]
 
 [% PROCESS global/header.html.tmpl
   title = title
