--- a/webtools/bugzilla/template/en/default/admin/params/mta.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/params/mta.html.tmpl
@@ -44,6 +44,9 @@
                              </li>
                            </ul>",
 
+  mailfrom => "The email address of the $terms.Bugzilla mail daemon.  Some email systems " _
+              "require this to be a valid email address.",
+
   sendmailnow => "Sites using anything older than version 8.12 of 'sendmail' " _
                  "can achieve a significant performance increase in the " _
                  "UI -- at the cost of delaying the sending of mail -- by " _
