--- a/webtools/bugzilla/template/en/default/email/votes-removed.txt.tmpl
+++ b/webtools/bugzilla/template/en/default/email/votes-removed.txt.tmpl
@@ -21,9 +21,10 @@
 
 [% PROCESS global/variables.none.tmpl %]
 
-From: bugzilla-daemon
+From: [% Param('mailfrom') %]
 To: [% to %]
 Subject: [% terms.Bug %] [%+ bugid %] Some or all of your votes have been removed.
+X-Bugzilla-Type: voteremoved
 
 Some or all of your votes have been removed from [% terms.bug %] [%+ bugid %].
 
