--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -227,6 +227,7 @@
 [% PROCESS testopia/case/table.html.tmpl
    table = case_table %]
   <a href="tr_new_case.cgi?plan_id=[% plan.id FILTER none %]">Create a New Test Case</a>
+  <a href="tr_list_cases.cgi?plan_id=[% plan.id FILTER none %]">List Cases</a>
 </div>
 
 [%##### Test Runs #####%]
@@ -239,6 +240,7 @@
 [% PROCESS testopia/run/table.html.tmpl
    table = run_table %]
   <a href="tr_new_run.cgi?plan_id=[% plan.id FILTER none %]&case_status_id=2">Create a New Test Run</a>
+  <a href="tr_list_runs.cgi?plan_id=[% plan.id FILTER none %]&case_status_id=2">List Runs</a>
 </div>
 [%##### Attachments #####%]
 <br><br>
