Bug 357478: Custom fields should appear as text when they are not editable Patch by Olav Vitters <olav@bkor.dhs.org> r=LpSolit a=justdave

--- a/webtools/bugzilla/template/en/default/bug/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/edit.html.tmpl
@@ -405,7 +405,7 @@
             [% FOREACH field = fields %]
               <tr>
                 [% PROCESS bug/field.html.tmpl value=bug.${field.name}
-                                               editable = 1
+                                               editable = bug.check_can_change_field(field.name, 0, 1) || !user.id
                                                value_span = 2 %]
               </tr>
             [% END %]
