--- a/webtools/addons/public/htdocs/css/rustico/addons-rustico.css
+++ b/webtools/addons/public/htdocs/css/rustico/addons-rustico.css
@@ -228,6 +228,21 @@ h6 { font-size: 90%; border: 0; }
 	margin: 0 10px 0 0;
 }
 
+.preview-image a {
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    font-size: smaller;
+}
+
+.addon-display .preview-image {
+    float: right;
+}
+
+.addon-display .version-and-date {
+    font-size: smaller;
+}
+
 .addon-feature .addon-feature-text { margin-left: 220px; }
 .bookmarkaddon-feature .addon-feature-text { margin-left: 190px; }
 
