Make search-results add-on name bigger rel. to version and byline. Link from featured add-on to its page. Infrastructure for custom extra-menus (god help me). Image padding on the front page for Deb. Better show/hide advanced options appearance for Beltzner. "Welcome to Firefox Add-ons" header on main page to make alignment consistent.

--- a/webtools/addons/public/htdocs/css/rustico/addons-rustico.css
+++ b/webtools/addons/public/htdocs/css/rustico/addons-rustico.css
@@ -170,6 +170,7 @@ h6 { font-size: 90%; border: 0; }
     border: none;
     float: right;
     text-decoration: none;
+    margin-left: 10px;
 }
 
 .front-recommended img {
@@ -373,6 +374,15 @@ p.install-button {
 
 #search-results .desc p {
     margin-bottom: 0px;
+}
+
+#search-results h2 {
+    font-weight: bold;
+}
+
+#search-results h2 span {
+    font-weight: normal;
+    font-size: 80%;
 }
 
 #pages #next-page {
