Bug 152688 - "doctor error message does not escape input" [p=reed r=mkanat]

--- a/webtools/doctor/templates/code-error.tmpl
+++ b/webtools/doctor/templates/code-error.tmpl
@@ -42,7 +42,7 @@
       at <a href="mailto:[% config.ADMIN_EMAIL %]">[% config.ADMIN_EMAIL %]</a>.
     </p>
     
-    <p>[% message %]</p>
+    <p>[% message FILTER html %]</p>
   </body>
 
 </html>
