--- a/webtools/doctor/templates/user-error.tmpl
+++ b/webtools/doctor/templates/user-error.tmpl
@@ -38,7 +38,7 @@
       Doctor couldn't process your request because of the following problem:
     </p>
     
-    <p><big><b>[% message %]</b></big></p>
+    <p><big><b>[% message FILTER html %]</b></big></p>
     
       <p>
         The problem occurred when Doctor tried to execute the CVS command:
